@@ -5,21 +5,21 @@
 	<days>
 		<day weekday="Monday">
 			<booking>
-				<timeslot start="1030" end="1220">10:30 to 12:20</timeslot>
+				<timeslot start="10:30" end="12:20"></timeslot>
 				<courseCode>4650</courseCode>
 				<courseType>Lab</courseType>
 				<room>SE12-306</room>
 				<instructor>Medhat Elmasry</instructor>
 			</booking>
 			<booking>
-				<timeslot start="1530" end="1620">15:30 to 16:20</timeslot>
+				<timeslot start="15:30" end="16:20"></timeslot>
 				<courseCode>4910</courseCode>
 				<courseType>Lec</courseType>
 				<room>SW1-2005</room>
 				<instructor>Richard Chau</instructor>
 			</booking>
 			<booking>
-				<timeslot start="1630" end="1720">16:30 to 17:20</timeslot>
+				<timeslot start="16:30" end="17:20"></timeslot>
 				<courseCode>4650</courseCode>
 				<courseType>Lec</courseType>
 				<room>SE6-205</room>
@@ -28,21 +28,21 @@
 		</day>
 		<day weekday="Tuesday">
 			<booking>
-				<timeslot start="0830" end="1020">08:30 to 10:20</timeslot>
+				<timeslot start="08:30" end="10:20"></timeslot>
 				<courseCode>4620</courseCode>
 				<courseType>Lab</courseType>
 				<room>SE12-306</room>
 				<instructor>Bethany Edmunds</instructor>
 			</booking>
 			<booking>
-				<timeslot start="1230" end="1320">12:30 to 13:20</timeslot>
+				<timeslot start="12:30" end="13:20"></timeslot>
 				<courseCode>4650</courseCode>
 				<courseType>Lec</courseType>
 				<room>SE6-205</room>
 				<instructor>Medhat Elmasry</instructor>
 			</booking>
 			<booking>
-				<timeslot start="1530" end="1720">15:30 to 17:20</timeslot>
+				<timeslot start="15:30" end="17:20"></timeslot>
 				<courseCode>4620</courseCode>
 				<courseType>Lec</courseType>
 				<room>SW1-2020</room>
@@ -51,7 +51,7 @@
 		</day>
 		<day weekday="Wednesday">
 			<booking>
-				<timeslot start="1230" end="1420">12:30 to 14:20</timeslot>
+				<timeslot start="12:30" end="14:20"></timeslot>
 				<courseCode>4850</courseCode>
 				<courseType>Lec</courseType>
 				<room>SE6-207</room>
@@ -60,21 +60,21 @@
 		</day>
 		<day weekday="Thursday">
 			<booking>
-				<timeslot start="0930" end="1020">09:30 to 10:20</timeslot>
+				<timeslot start="09:30" end="10:20"></timeslot>
 				<courseCode>4910</courseCode>
 				<courseType>Lec</courseType>
 				<room>SW1-1205</room>
 				<instructor>Richard Chau</instructor>
 			</booking>
 			<booking>
-				<timeslot start="1030" end="1220">10:30 to 12:20</timeslot>
+				<timeslot start="10:30" end="12:20"></timeslot>
 				<courseCode>4910</courseCode>
 				<courseType>Lab</courseType>
 				<room>SE12-306</room>
 				<instructor>Richard Chau</instructor>
 			</booking>
 			<booking>
-				<timeslot start="1330" end="1520">13:30 to 15:20</timeslot>
+				<timeslot start="13:30" end="15:20"></timeslot>
 				<courseCode>4850</courseCode>
 				<courseType>Lab</courseType>
 				<room>SE12-308</room>
@@ -83,21 +83,21 @@
 		</day>
 		<day weekday="Friday">
 			<booking>
-				<timeslot start="0830" end="1020">08:30 to 10:20</timeslot>
+				<timeslot start="08:30" end="10:20"></timeslot>
 				<courseCode>4660</courseCode>
 				<courseType>Lec</courseType>
 				<room>SW9-206</room>
 				<instructor>Steve Fabiszewski</instructor>
 			</booking>
 			<booking>
-				<timeslot start="1030" end="1220">10:30 to 12:20</timeslot>
+				<timeslot start="10:30" end="12:20"></timeslot>
 				<courseCode>4770</courseCode>
 				<courseType>Lab</courseType>
 				<room>SE12-306</room>
 				<instructor>Trevor Lord</instructor>
 			</booking>
 			<booking>
-				<timeslot start="1330" end="1530">13:30 to 15:30</timeslot>
+				<timeslot start="13:30" end="15:30"></timeslot>
 				<courseCode>4660</courseCode>
 				<courseType>Lab</courseType>
 				<room>SE12-306</room>
@@ -106,7 +106,7 @@
 		</day>
 	</days>
 	<timeslots>
-		<timeslot start="0830" end="10:20">
+		<timeslot start="08:30" end="10:20">
 			<booking>
 				<day weekday="Tuesday"></day>
 				<courseCode>4620</courseCode>
@@ -122,7 +122,7 @@
 				<instructor>Steve Fabiszewski</instructor>
 			</booking>
 		</timeslot>
-		<timeslot start="0930" end="10:20">
+		<timeslot start="09:30" end="10:20">
 			<booking>
 				<day weekday="Thursday"></day>
 				<courseCode>4910</courseCode>
@@ -131,7 +131,7 @@
 				<instructor>Richard Chau</instructor>
 			</booking>
 		</timeslot>
-		<timeslot start="1030" end="12:20">
+		<timeslot start="10:30" end="12:20">
 			<booking>
 				<day weekday="Monday"></day>
 				<courseCode>4650</courseCode>
@@ -154,7 +154,7 @@
 				<instructor>Trevor Lord</instructor>
 			</booking>
 		</timeslot>
-		<timeslot start="1230" end="13:20">
+		<timeslot start="12:30" end="13:20">
 			<booking>
 				<day weekday="Tuesday"></day>
 				<courseCode>4650</courseCode>
@@ -163,16 +163,16 @@
 				<instructor>Medhat Elmasry</instructor>
 			</booking>
 		</timeslot>
-		<timeslot start="1230" end="14:20">
+		<timeslot start="12:30" end="14:20">
 			<booking>
-				<day weekday="Wednesday">Wednesdaynesday</day>
+				<day weekday="Wednesday"></day>
 				<courseCode>4850</courseCode>
 				<courseType>Lec</courseType>
 				<room>SE6-207</room>
 				<instructor>James Parry</instructor>
 			</booking>
 		</timeslot>
-		<timeslot start="1330" end="15:20">
+		<timeslot start="13:30" end="15:20">
 			<booking>
 				<day weekday="Thursday"></day>
 				<courseCode>4850</courseCode>
@@ -188,7 +188,7 @@
 				<instructor>Steve Fabiszewski</instructor>
 			</booking>
 		</timeslot>
-		<timeslot start="1530" end="16:20">
+		<timeslot start="15:30" end="16:20">
 			<booking>
 				<day weekday="Monday"></day>
 				<courseCode>4910</courseCode>
@@ -197,7 +197,7 @@
 				<instructor>Richard Chau</instructor>
 			</booking>
 		</timeslot>
-		<timeslot start="1630" end="17:20">
+		<timeslot start="16:30" end="17:20">
 			<booking>
 				<day weekday="Monday"></day>
 				<courseCode>4650</courseCode>
@@ -206,7 +206,7 @@
 				<instructor>Medhat Elmasry</instructor>
 			</booking>
 		</timeslot>
-		<timeslot start="1530" end="17:20">
+		<timeslot start="15:30" end="17:20">
 			<booking>
 				<day weekday="Tuesday"></day>
 				<courseCode>4620</courseCode>
@@ -220,21 +220,21 @@
 		<course courseCode="4910">
 			<booking>
 				<day weekday="Monday"></day>
-				<timeslot start="1530" end="16:20">15:30 to 16:20</timeslot>
+				<timeslot start="15:30" end="16:20"></timeslot>
 				<courseType>Lec</courseType>
 				<room>SW1-2005</room>
 				<instructor>Richard Chau</instructor>
 			</booking>
 			<booking>
 				<day weekday="Thursday"></day>
-				<timeslot start="0930" end="10:20">09:30 to 10:20</timeslot>
+				<timeslot start="09:30" end="10:20"></timeslot>
 				<courseType>Lec</courseType>
 				<room>SW5-1840</room>
 				<instructor>Richard Chau</instructor>
 			</booking>
 			<booking>
 				<day weekday="Thursday"></day>
-				<timeslot start="1530" end="16:20">15:30 to 6:20</timeslot>
+				<timeslot start="15:30" end="16:20"></timeslot>
 				<courseType>Lab</courseType>
 				<room>SE12-306</room>
 				<instructor>Richard Chau</instructor>
@@ -243,14 +243,14 @@
 		<course courseCode="4660">
 			<booking>
 				<day weekday="Friday"></day>
-				<timeslot start="0830" end="10:20">08:30 to 10:20</timeslot>
+				<timeslot start="08:30" end="10:20"></timeslot>
 				<courseType>Lec</courseType>
 				<room>SW9-206</room>
 				<instructor>Steve Fabiszewski</instructor>
 			</booking>
 			<booking>
 				<day weekday="Friday"></day>
-				<timeslot start="13:30" end="15:20">13:30 to 15:20</timeslot>
+				<timeslot start="13:30" end="15:20"></timeslot>
 				<courseType>Lab</courseType>
 				<room>SE12-306</room>
 				<instructor>Steve Fabiszewski</instructor>
@@ -259,7 +259,7 @@
 		<course courseCode="4770">
 			<booking>
 				<day weekday="Friday"></day>
-				<timeslot start="1030" end="12:20">10:30 to 12:20</timeslot>
+				<timeslot start="10:30" end="12:20"></timeslot>
 				<courseType>Lab</courseType>
 				<room>SE12-306</room>
 				<instructor>Trevor Lord</instructor>
@@ -268,21 +268,21 @@
 		<course courseCode="4650">
 			<booking>
 				<day weekday="Monday"></day>
-				<timeslot start="1030" end="12:20">10:30 to 12:20</timeslot>
+				<timeslot start="10:30" end="12:20"></timeslot>
 				<courseType>Lab</courseType>
 				<room>SE12-306</room>
 				<instructor>Medhat Elmasry</instructor>
 			</booking>
 			<booking>
 				<day weekday="Monday"></day>
-				<timeslot start="1630" end="17:20">16:30 to 17:20</timeslot>
+				<timeslot start="16:30" end="17:20"></timeslot>
 				<courseType>Lec</courseType>
 				<room>SE6-205</room>
 				<instructor>Medhat Elmasry</instructor>
 			</booking>
 			<booking>
 				<day weekday="Tuesday"></day>
-				<timeslot start="1230" end="13:20">12:30 to 13:20</timeslot>
+				<timeslot start="12:30" end="13:20"></timeslot>
 				<courseType>Lec</courseType>
 				<room>SE6-205</room>
 				<instructor>Medhat Elmasry</instructor>
@@ -291,14 +291,14 @@
 		<course courseCode="4620">
 			<booking>
 				<day weekday="Tuesday"></day>
-				<timeslot start="0830" end="10:20">08:30 to 10:20</timeslot>
+				<timeslot start="08:30" end="10:20"></timeslot>
 				<courseType>Lab</courseType>
 				<room>SE12-306</room>
 				<instructor>Bethany Edmunds</instructor>
 			</booking>
 			<booking>
 				<day weekday="Tuesday"></day>
-				<timeslot start="1530" end="17:20">15:30 to 17:20</timeslot>
+				<timeslot start="15:30" end="17:20"></timeslot>
 				<courseType>Lec</courseType>
 				<room>SW1-2020</room>
 				<instructor>Bethany Edmunds</instructor>
@@ -307,14 +307,14 @@
 		<course courseCode="4850">
 			<booking>
 				<day weekday="Wednesday"></day>
-				<timeslot start="1230" end="14:20">12:30 to 14:20</timeslot>
+				<timeslot start="12:30" end="14:20"></timeslot>
 				<courseType>Lec</courseType>
 				<room>SE6-207</room>
 				<instructor>James Parry</instructor>
 			</booking>
 			<booking>
 				<day weekday="Thursday"></day>
-				<timeslot start="1330" end="15:20">13:30 to 15:20</timeslot>
+				<timeslot start="13:30" end="15:20"></timeslot>
 				<courseType>Lab</courseType>
 				<room>SE12-308</room>
 				<instructor>James Parry</instructor>
