@@ -1,8 +1,10 @@
 Newest at the top
 YYYY-MM-DD HR:MIN - comment
 
+2016-03-28 14:10 - Created courses facet schema
+2016-03-27 14:00 - Added min and max time restriction in the schema
+2016-03-27 13:52 - Changed the reg-ex for course code
 2016-03-27 13:48 - Changed weekday names to full weekday names and changed master to timetable.xml
-2016-03-25 23:32 - Removed colons from timeslot elements
 2016-03-24 17:27 - Created days facet and updated master.xml
 2016-03-24 15:04 - Instructor element added
 2016-03-24 14:52 - data type for person is created
